--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,3 +2,38 @@ body {
     margin: 0;
     font-family: sans-serif;
 }
+
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+h1 {
+    text-align: center;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 30px;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+    margin-top: 20px;
+}
+
+#content {
+    width: 70%;
+}
