--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
-<title>Task Master</title>
 {% block head %}
+<title>Task Master</title>
 {% endblock %}
 
 {% block body %}
 <div class="content">
     <h1>Task Master</h1>
-
+    {% if tasks|length < 1 %}
+        <h2>There are no tasks. Create one below!</h2>
+    {% else %}
     <table>
         <tr>
             <th>Task</th>
@@ -20,11 +22,12 @@
             <td>
                 <a href="/delete/{{task.id}}">Delete</a>
                 <br>
-                <a href="">Update</a>
+                <a href="/update/{{task.id}}">Update</a>
             </td>
         </tr>
         {% endfor %}
     </table>
+    {% endif %}
 
     <form action="/" method="POST">
         <input type="text" name="content" id="content" placeholder="Type content">
